# Neon

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
lib/: CMakeLists.txt
lib/aruco/cmake/: installOptions.cmake  options.cmake
lib/aruco/src/: marker.cpp  picoflann.h
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
lib/stb/src/: dummy.cpp  stb_image.h
lib/vma/: CMakeLists.txt
lib/vma/src/: VmaUsage.cpp
src/: CMakeLists.txt  main.cpp
src/assimp/: AssimpGeometry.cpp  AssimpGeometry.h  AssimpLoader.cpp  AssimpLoader.h  AssimpMaterialParametrs.h  AssimpNewIOSystem.cpp  AssimpNewIOSystem.h  ModelLoader.cpp  ModelLoader.h
src/engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentCollection.cpp  ComponentCollection.h  ComponentImplementedEvents.cpp  ComponentImplementedEvents.h  ComponentWrapper.h  ComponentsHolder.cpp  ComponentsHolder.h  CursorEvent.h  Engine.h  FrameInformation.h  Frustum.cpp  Frustum.h  GameObject.cpp  GameObject.h  GraphicComponent.cpp  GraphicComponent.h  Identifiable.h  IdentifiableWrapper.h  KeyboardEvent.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Room.cpp  Room.h  Texture.cpp  Texture.h  TextureCollection.cpp  TextureCollection.h  TextureFormat.h  TexturesHolder.cpp  TexturesHolder.h  (+2 more)
src/engine/collection/: ComponentCollection.cpp  ComponentCollection.h  IdentifiableCollection.h  ModelCollection.cpp  ModelCollection.h  TextureCollection.cpp  TextureCollection.h
src/engine/geometry/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Transform.cpp  Transform.h
src/engine/io/: CursorEvent.h  KeyboardEvent.h  MouseButtonEvent.h  ScrollEvent.h
src/engine/light/: DirectionalLight.cpp  DirectionalLight.h  FlashLight.cpp  FlashLight.h  LightSystem.cpp  LightSystem.h  PointLight.cpp  PointLight.h
src/engine/model/: DefaultInstancingData.h  InputDescription.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelCreateInfo.h
src/engine/render/: CommandBuffer.cpp  CommandBuffer.h  CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferTextureCreateInfo.h  GraphicComponent.cpp  GraphicComponent.h  QTSwapChainFrameBuffer.cpp  QTSwapChainFrameBuffer.h  Render.cpp  Render.h  Texture.h  (+11 more)
src/gl/: GLApplication.cpp  GLApplication.h  GLMesh.cpp  GLMesh.h  GLModel.cpp  GLModel.h  GLShaderProgram.cpp  GLShaderProgram.h  GLShaderRenderer.cpp  GLShaderRenderer.h  GLShaderUniformBuffer.cpp  GLShaderUniformBuffer.h  GLTexture.cpp  GLTexture.h  Shader.cpp  Shader.h  ShaderController.cpp  ShaderController.h  Texture.cpp  Texture.h
src/neon/: Application.cpp  Application.h  Engine.h  Neon.h
src/shader/: default.frag  default.vert
src/test/: TestComponent.cpp  TestComponent.h  TestShaderController.cpp  TestShaderController.h  TestVertex.h
src/util/: CameraMovementComponent.cpp  CameraMovementComponent.h  ClusteredLinkedCollection.h  DeferredUtils.cpp  DeferredUtils.h  GLMUtils.cpp  GLMUtils.h  ModelLoaderParserComponent.cpp  ModelLoaderParserComponent.h  ModelUtils.cpp  ModelUtils.h  Range.h  Resource.cpp  Resource.h  Result.h
src/vulkan/: AbstractVKApplication.h  QTApplication.cpp  QTApplication.h  QtApplicationUtils.cpp  QtApplicationUtils.h  VKApplication.cpp  VKApplication.h  VKApplicationCreateInfo.h  VKMesh.cpp  VKMesh.h  VKModel.cpp  VKModel.h  VKQueueFamilyIndices.h  VKResource.cpp  VKResource.h  VKResourceBin.cpp  VKResourceBin.h  VKShaderProgram.cpp  VKShaderProgram.h  VKShaderRenderer.cpp  VKShaderRenderer.h  VKShaderUniform.h  VKShaderUniformBuffer.cpp  VKShaderUniformBuffer.h  VKSwapChainSupportDetails.cpp  VKSwapChainSupportDetails.h  VKTexture.cpp  VKTexture.h
test/: CMakeLists.txt  TestComponent.cpp  TestComponent.h  TestShaderController.cpp  TestShaderController.h  TestVertex.h  main.cpp
test/resource/: sans.json  sans_assimp_scene.json  sans_model.json
test/shader/: default.frag  default.vert
test/test1/: CMakeLists.txt  ConstantRotationComponent.cpp  ConstantRotationComponent.h  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  ImGuiTestComponent.cpp  ImGuiTestComponent.h  LockMouseComponent.cpp  LockMouseComponent.h  TestComponent.cpp  TestComponent.h  TestShaderController.cpp  TestShaderController.h  TestVertex.h  main.cpp
test/testAsyncUpdate/: BloomRender.cpp  BloomRender.h  CMakeLists.txt  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  LockMouseComponent.cpp  ModelAsyncFlushComponent.cpp  ModelAsyncFlushComponent.h  main.cpp
test/testCEF/: CMakeLists.txt  GlobalParametersUpdaterComponent.h  LockMouseComponent.h  TestVertex.h  main.cpp  subprocess_main.cpp
test/testCloth/: CMakeLists.txt  Cloth.cpp  Cloth.h  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  LockMouseComponent.cpp  LockMouseComponent.h  TestVertex.h  main.cpp
test/testGeometryShader/: CMakeLists.txt  LockMouseComponent.h  TestVertex.h  main.cpp
test/testLine/: CMakeLists.txt  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  Line.cpp  Line.h  TestVertex.h  main.cpp
test/testMeshShader/: CMakeLists.txt  ConstantRotationComponent.cpp  GlobalParametersUpdaterComponent.cpp  TestVertex.h  main.cpp
test/testOctree/: BoxView.h  CMakeLists.txt  DebugRenderComponent.h  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  LockMouseComponent.h  ObjectRaycastView.h  OctreeRaycastView.h  OctreeView.h  TestVertex.h  main.cpp
test/testPBR/: BloomRender.cpp  BloomRender.h  CMakeLists.txt  ComputeIrradianceSkyboxComponent.cpp  ComputeIrradianceSkyboxComponent.h  ConstantRotationComponent.cpp  ConstantRotationComponent.h  GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  LockMouseComponent.cpp  LockMouseComponent.h  TestVertex.h  main.cpp
test/testqt/: CMakeLists.txt  ConstantRotationComponent.h  main.cpp
test/unit/: CMakeLists.txt  clustered_linked_collection.cpp  color.cpp  coroutine.cpp  files.cpp  loader.cpp  logging.cpp  plugin.cpp  task.cpp
(+511 files in other folders)
